# blackbird_walking

./: .gitignore  .gitmodules  README.md  sync_repos.sh
ai_model/: .gitignore  README.md  actor_script.pt  box2d_train.py  main.py  test_agent.py  test_balance.py  test_box2d.py  test_walk.py  train_agent.py  train_balance.py  train_walk.py
ai_model/python/: agent.py  model.py
ai_model/python/utils/: helper_funcs.py  memory.py
ai_model/world/: empty.world
gz_blackbird/: .gitignore  MANIFEST.in  README.md  pybind_test.py  setup.py
gz_blackbird/include/: RobotStateUpdater.h
gz_blackbird/python/gz_biped_gym/: BalanceEnv.py  BlackbirdEnv.py  __init__.py
gz_blackbird/python/gz_biped_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gz_blackbird/src/: RobotStateUpdater.cpp  Simulator.cpp  reset_loop.cpp
gz_blackbird/world/: empty.world
realtime_ws/install/: local_setup.sh  setup.sh
realtime_ws/install/blackbird_ros2/lib/blackbird_ros2/: effort_example_cpp  reverse_effort_cpp
realtime_ws/install/blackbird_ros2/share/ament_index/resource_index/parent_prefix_path/: blackbird_ros2
realtime_ws/install/blackbird_ros2/share/blackbird_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
realtime_ws/install/blackbird_ros2/share/blackbird_ros2/cmake/: blackbird_ros2Config.cmake
realtime_ws/install/blackbird_ros2/share/blackbird_ros2/launch/: blackbird_gz.launch.py  blackbird_rviz.launch.py
realtime_ws/install/blackbird_ros2/share/blackbird_ros2/src/: ContactPlugin.cpp  reverse_effort.cpp
realtime_ws/log/: latest_build
realtime_ws/src/blackbird_ros2/: .gitignore  CMakeLists.txt  README.md  commands.txt
realtime_ws/src/blackbird_ros2/include/: ContactPlugin.h  PosePublisher.h
realtime_ws/src/blackbird_ros2/rviz/: basic.rviz
realtime_ws/src/blackbird_ros2/src/: ContactPlugin.cpp  PosePublisher.cpp  effort_example.cpp
realtime_ws/src/blackbird_ros2/urdf/: blackbird.urdf  blackbird_gz.urdf
ros2/src/blackbird_ros2/: CMakeLists.txt  README.md  package.xml
ros2/src/blackbird_ros2/config/: blackbird_effort_controller.yaml
ros2/src/blackbird_ros2/rviz/: blackbird.rviz
